--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,13 @@
 <head>
    <meta charset="utf-8">
    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-   <title>Index - FlexStart Bootstrap Template</title>
+   <title>East-West Felling Station</title>
    <meta name="description" content="">
    <meta name="keywords" content="">
 
    <!-- Favicons -->
-   <link href="assets/img/img/logo.jpg" rel="icon">
-   <link href="assets/img/img/logo.jpg" rel="apple-touch-icon">
+   <link href="assets/img/logo.jpg" rel="icon">
+   <link href="assets/img/logo.jpg" rel="apple-touch-icon">
    <!-- Fonts -->
    <link href="https://fonts.googleapis.com" rel="preconnect">
    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
@@ -37,7 +37,7 @@
       <div class="container-fluid container-xl position-relative d-flex align-items-center">
          <a href="/index.html" class="logo d-flex align-items-center me-auto">
             <!-- Uncomment the line below if you also wish to use an image logo -->
-            <img src="assets/img/New folder/logo.jpg" alt="">
+            <img src="assets/img/logo.jpg" alt="">
             <h2 class="sitename pt-2">East West Felling Station</h2>
          </a>
          <nav id="navmenu" class="navmenu">
@@ -55,7 +55,7 @@
 
 <!-- Page Title -->
 <div class="page-title">
-   <div class="heading bg-image" style="background-image: url('/assets/img/img/02.jpg');">
+   <div class="heading bg-image" style="background-image: url('/assets/img/02.jpg');">
       <div class="container">
          <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
@@ -88,7 +88,7 @@
       </div><!-- End Section Title -->
    
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-   
+         
          <div class="row gy-4">
    
             <div class="col-lg-6">
@@ -171,6 +171,12 @@
          </div>
    
       </div>
+      <div class="">
+         <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3647.94365136243!2d90.36018068892479!3d23.89161674121059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c390ebee894f%3A0xeffade432442bf4d!2z4KaH4Ka44KeN4KafLeCmk-Cmr-CmvOCnh-CmuOCnjeCmnyDgpqvgpr_gprLgpr_gpoIg4Ka44KeN4Kaf4KeH4Ka24KaoIDAx!5e0!3m2!1sen!2sbd!4v1737641915697!5m2!1sen!2sbd"
+            width="100%" height="450" style="border:1;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
    
    </section><!-- /Contact Section -->
 
@@ -179,7 +185,7 @@
          <div class="row gy-4">
             <div class="col-sm-4 footer-about">
                <div class="d-flex gap-2 align-items-center">
-                  <img src="assets/img/img/logo.jpg" alt="" class="w-2 h-3 footer-logo">
+                  <img src="assets/img/logo.jpg" alt="" class="w-2 h-3 footer-logo">
                   <h2 class="text-sm font-weight-bold pt-1">East West Felling Station</h2>
                </div>
                <!-- <a href="index.html" class="d-flex align-items-center">
