--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/img/logo.jpg" rel="icon">
-  <link href="assets/img/img/logo.jpg" rel="apple-touch-icon">
+  <link href="assets/img/logo.jpg" rel="icon">
+  <link href="assets/img/logo.jpg" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -65,7 +65,7 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
       <a href="/index.html" class="logo d-flex align-items-center me-auto">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/img/logo.jpg" alt="">
+        <img src="assets/img/logo.jpg" alt="">
         <h2 class="sitename pt-2">East West Felling Station</h2>
       </a>
       <nav id="navmenu" class="navmenu px-3">
@@ -86,13 +86,11 @@
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <img src="./assets/img/img/02.jpg" alt="">
+          <img src="./assets/img/02.jpg" alt="">
         </div>
-        
-
         <div class="swiper-slide">
           <img
-            src="./assets/img/img/07.jpg"
+            src="./assets/img/07.jpg"
             alt="">
         </div>
 
@@ -308,99 +306,7 @@
 
     </section><!-- /Recent Posts Section -->
 
-    <!-- Contact Section -->
-    <section id="contact" class="contact section">
-
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
-        <p>Contact Us</p>
-      </div><!-- End Section Title -->
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="row gy-4">
-
-          <div class="col-lg-6">
-
-            <div class="row gy-4">
-              <div class="col-md-6">
-                <div class="info-item" data-aos="fade" data-aos-delay="200">
-                  <i class="bi bi-geo-alt"></i>
-                  <h3>Address</h3>
-                  <p>A108 Adam Street</p>
-                  <p>New York, NY 535022</p>
-                </div>
-              </div><!-- End Info Item -->
-
-              <div class="col-md-6">
-                <div class="info-item" data-aos="fade" data-aos-delay="300">
-                  <i class="bi bi-telephone"></i>
-                  <h3>Call Us</h3>
-                  <p>+1 5589 55488 55</p>
-                  <p>+1 6678 254445 41</p>
-                </div>
-              </div><!-- End Info Item -->
-
-              <div class="col-md-6">
-                <div class="info-item" data-aos="fade" data-aos-delay="400">
-                  <i class="bi bi-envelope"></i>
-                  <h3>Email Us</h3>
-                  <p>info@example.com</p>
-                  <p>contact@example.com</p>
-                </div>
-              </div><!-- End Info Item -->
-
-              <div class="col-md-6">
-                <div class="info-item" data-aos="fade" data-aos-delay="500">
-                  <i class="bi bi-clock"></i>
-                  <h3>Open Hours</h3>
-                  <p>Monday - Friday</p>
-                  <p>9:00AM - 05:00PM</p>
-                </div>
-              </div><!-- End Info Item -->
-
-            </div>
-
-          </div>
-
-          <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
-              <div class="row gy-4">
-
-                <div class="col-md-6">
-                  <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
-                </div>
-
-                <div class="col-md-6 ">
-                  <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
-                </div>
-
-                <div class="col-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
-                </div>
-
-                <div class="col-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
-                </div>
-
-                <div class="col-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-
-                  <button type="submit">Send Message</button>
-                </div>
-
-              </div>
-            </form>
-          </div><!-- End Contact Form -->
-
-        </div>
-
-      </div>
-
-    </section><!-- /Contact Section -->
+   
 
   </main>
 
@@ -409,7 +315,7 @@
       <div class="row gy-4">
         <div class="col-sm-4 footer-about">
          <div class="d-flex gap-2 align-items-center">
-          <img src="assets/img/img/logo.jpg" alt="" class="w-2 h-3 footer-logo">
+          <img src="assets/img/logo.jpg" alt="" class="w-2 h-3 footer-logo">
           <h2 class="text-sm font-weight-bold pt-1">Felling Station</h2>
          </div>
           <!-- <a href="index.html" class="d-flex align-items-center">
@@ -451,7 +357,7 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Felling Station</strong> <span>All Rights Reserved</span>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">East West Felling Station</strong> <span>All Rights Reserved</span>
       </p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
