--- a/service.html
+++ b/service.html
@@ -4,13 +4,13 @@
 <head>
    <meta charset="utf-8">
    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-   <title>Index - FlexStart Bootstrap Template</title>
+   <title>East-West Felling Station</title>
    <meta name="description" content="">
    <meta name="keywords" content="">
 
    <!-- Favicons -->
-   <link href="assets/img/img/logo.jpg" rel="icon">
-   <link href="assets/img/img/logo.jpg" rel="apple-touch-icon">
+   <link href="assets/img/logo.jpg" rel="icon">
+   <link href="assets/img/logo.jpg" rel="apple-touch-icon">
    <!-- Fonts -->
    <link href="https://fonts.googleapis.com" rel="preconnect">
    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
@@ -37,7 +37,7 @@
       <div class="container-fluid container-xl position-relative d-flex align-items-center">
          <a href="/index.html" class="logo d-flex align-items-center me-auto">
             <!-- Uncomment the line below if you also wish to use an image logo -->
-            <img src="assets/img/New folder/logo.jpg" alt="">
+            <img src="assets/img/logo.jpg" alt="">
             <h2 class="sitename pt-2">East West Felling Station</h2>
          </a>
          <nav id="navmenu" class="navmenu">
@@ -55,7 +55,7 @@
 
 <!-- Page Title -->
 <div class="page-title">
-   <div class="heading bg-image" style="background-image: url('/assets/img/img/02.jpg');">
+   <div class="heading bg-image" style="background-image: url('/assets/img/02.jpg');">
       <div class="container">
          <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
@@ -130,8 +130,8 @@
          <div class="row gy-4">
             <div class="col-sm-4 footer-about">
                <div class="d-flex gap-2 align-items-center">
-                  <img src="assets/img/img/logo.jpg" alt="" class="w-2 h-3 footer-logo">
-                  <h2 class="text-sm font-weight-bold pt-1">Felling Station</h2>
+                  <img src="assets/img/logo.jpg" alt="" class="w-2 h-3 footer-logo">
+                  <h2 class="text-sm font-weight-bold pt-1">East West Felling Station</h2>
                </div>
                <!-- <a href="index.html" class="d-flex align-items-center">
                <span class="sitename">FlexStart</span>
